--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <title>OC Lernkarten ✨</title>
     <style>
-        :root { --primary: #3498db; --success: #27ae60; --danger: #e74c3c; --dark: #2c3e50; --bg5: #ec96a4; }
-        body { font-family: 'Segoe UI', sans-serif; background-color: var(--bg); display: flex; flex-direction: column; align-items: center; padding: 20px; margin: 0; }
+    :root { 
+        /* Dein gewünschter angenehmer Pinkton */
+        --bg: #FCE4EC; 
+        /* Weitere Farben für die Karten und Knöpfe */
+        --primary: #d81b60; /* Ein dunkleres Pink/Beere für die Buttons passend zum Hintergrund */
+        --success: #27ae60; 
+        --danger: #e74c3c; 
+        --dark: #2c3e50; 
+    }
+
+    body { 
+        font-family: 'Segoe UI', sans-serif; 
+        /* Hier wird die Variable --bg benutzt */
+        background-color: var(--bg); 
+        display: flex; 
+        flex-direction: column; 
+        align-items: center; 
+        padding: 20px; 
+        margin: 0; }
+    
         .setup-area { margin-bottom: 20px; background: white; padding: 15px 25px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); display: flex; flex-direction: column; align-items: center; gap: 10px; }
         select { padding: 10px; border-radius: 6px; border: 1px solid #ddd; font-size: 16px; width: 300px; cursor: pointer; }
         .container { width: 100%; max-width: 650px; text-align: center; }
