--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@ const allCards = [
     { cat: "Alkene", q: "Was ist die Zaitsev-Regel?", a: "Bei Eliminierungen entsteht bevorzugt das Alken mit der höheren Anzahl an Alkylgruppen an der Doppelbindung." },
     { cat: "Alkene", q: "Hydratisierung von Alkinen?", a: "Ergibt Ketone (via Keto-Enol-Tautomerie), außer bei Ethin (ergibt Aldehyd)." },
     { cat: "Alkene", q: "Hydroborierung/Oxidation?", a: "Anti-Markownikow-Addition von Wasser zu Alkoholen." },
+    { cat: "Alkene", q: "Prioritäten nach Ordnungszahl" , a: "I >Br>Cl>S >P >O>N >C >H"},
+    { cat: "Alkene", q: "Wofür stehen E und Z?" , a: "(Z) (Zusammen): Die beiden Reste mit höchster Priorität liegen auf derselben Seite.(E) (Entgegen): Die beiden Reste liegen auf gegenüberliegenden Seiten. "},
 
     // --- AROMATEN ---
     { cat: "Aromaten", q: "Hückel-Regel Kriterien?", a: "1. Zyklisch, 2. Planar, 3. Durchgehend konjugiert, 4. 4n+2 Pi-Elektronen." },
