--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <option value="Stereochemie">4. Stereochemie & Chiralität</option>
         <option value="Carbonyl">5. Carbonyl, Säuren & Amine</option>
         <option value="Naturstoffe">6. Naturstoffe & Polymere</option>
+        <option value="Aminosäuren">7. Aminosäuren</option>
     </select>
     <button onclick="restartLearning()" style="font-size: 12px; margin-top:5px;">Stapel neu mischen</button>
 </div>
@@ -157,6 +158,13 @@ const allCards = [
     { cat: "Naturstoffe", q: "Polyethylen (PE) Herstellung?", a: "Radikalische Polymerisation von Ethen." },
     { cat: "Naturstoffe", q: "Vulkanisation?", a: "Vernetzung von Kautschuk mit Schwefelbrücken." },
     { cat: "Naturstoffe", q: "Wichtige Monomere: Styrol, Vinylchlorid?", a: "Ergeben Polystyrol (PS) und Polyvinylchlorid (PVC)." }
+
+    // --- Aminosäuren ---
+    { 
+  cat: "Aminosäuren", 
+  q: "Wie sieht die elektrophile aromatische Substitution (S<sub>E</sub>Ar) am Benzol aus?", 
+  a: "Hier ist der Mechanismus: <br><img src='' style='width:100%; max-height:200px; object-fit:contain;'>" 
+}
 ];
 
 let workingDeck = [];
