--- a/index.html
+++ b/index.html
@@ -159,11 +159,71 @@ const allCards = [
     { cat: "Naturstoffe", q: "Vulkanisation?", a: "Vernetzung von Kautschuk mit Schwefelbrücken." },
     { cat: "Naturstoffe", q: "Wichtige Monomere: Styrol, Vinylchlorid?", a: "Ergeben Polystyrol (PS) und Polyvinylchlorid (PVC)." }
 
-    // --- Aminosäuren ---
-    { 
-  cat: "Aminosäuren", 
-  q: "Wie sieht die elektrophile aromatische Substitution (S<sub>E</sub>Ar) am Benzol aus?", 
-  a: "Hier ist der Mechanismus: <br><img src='' style='width:100%; max-height:200px; object-fit:contain;'>" 
+   // --- AMINOSÄUREN ---
+
+// Unpolare / Aliphatische AS
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Glycin (Gly, G)?", 
+    a: "Die einfachste Aminosäure (achiral!). Rest: -H <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Glycine_structure.svg/200px-Glycine_structure.svg.png'>" 
+},
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Alanin (Ala, A)?", 
+    a: "Rest: Methylgruppe (-CH3) <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/L-Alanine_structure.svg/200px-L-Alanine_structure.svg.png'>" 
+},
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Valin (Val, V)?", 
+    a: "Rest: Isopropylgruppe. <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/L-Valine_structure.svg/200px-L-Valine_structure.svg.png'>" 
+},
+
+// Schwefelhaltige AS
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Cystein (Cys, C)?", 
+    a: "Wichtig für Disulfidbrücken. Rest: -CH2-SH <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/L-Cysteine_structure.svg/200px-L-Cysteine_structure.svg.png'>" 
+},
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Methionin (Met, M)?", 
+    a: "Start-Aminosäure bei der Translation. Rest: -CH2-CH2-S-CH3 <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/L-Methionine_structure.svg/200px-L-Methionine_structure.svg.png'>" 
+},
+
+// Aromatische AS
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Phenylalanin (Phe, F)?", 
+    a: "Rest: Benzylgruppe. <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/L-Phenylalanine_structure.svg/200px-L-Phenylalanine_structure.svg.png'>" 
+},
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Tyrosin (Tyr, Y)?", 
+    a: "Rest: para-Hydroxy-benzylgruppe. <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/L-Tyrosine_structure.svg/200px-L-Tyrosine_structure.svg.png'>" 
+},
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Tryptophan (Trp, W)?", 
+    a: "Größte AS. Rest: Indol-System. <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/L-Tryptophan_structure.svg/200px-L-Tryptophan_structure.svg.png'>" 
+},
+
+// Saure & Basische AS
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Asparaginsäure (Asp, D)?", 
+    a: "Sauer. Zweite Carboxylgruppe im Rest. <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/L-Aspartic_acid_structure.svg/200px-L-Aspartic_acid_structure.svg.png'>" 
+},
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Lysin (Lys, K)?", 
+    a: "Basisch. Rest: -CH2-CH2-CH2-CH2-NH2 <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/L-Lysine_structure.svg/200px-L-Lysine_structure.svg.png'>" 
+},
+
+// Besonderheit
+{ 
+    cat: "Naturstoffe", 
+    q: "Struktur von Prolin (Pro, P)?", 
+    a: "Einzige sekundäre Aminosäure (Ring zum Stickstoff). <br><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/L-Proline_structure.svg/200px-L-Proline_structure.svg.png'>" 
 }
 ];
 
